--- a/layouts/partials/articles/article-simple-link.html
+++ b/layouts/partials/articles/article-simple-link.html
@@ -1,10 +1,18 @@
+{{- /*  
+Retrieves a dictionary with 2 parameters:
+page - the page
+show_emojis - bool
+*/ -}}
+
 <a class="article-showcase-box" href="{{.RelPermalink}}">
     <article>
-        <time datetime='{{time.Format "2006-1-2" .Date }}'>{{time.Format "2 Jan 2006" .Date }}</time>
+        {{- /*  <time datetime='{{time.Format "2006-1-2" .Date }}'>{{time.Format "2 Jan 2006" .Date }}</time>  */ -}}
+        <time datetime='{{time.Format "2006-1-2" .page.Date }}'>{{time.Format "2 Jan 2006" .page.Date }}</time>
         <header>
             <h1>{{.Title}}</h1>
+            <h1>{{if .show_emojis}}{{with .page.Params.emoji}}{{printf "%s " .}}{{end}}{{end}}{{.page.Title}}</h1>
             {{- /*  {{- with .Description -}}<h2>{{. | markdownify}}</h2>{{- end -}}  */ -}}
-            {{- with .Description -}}<p>{{. | markdownify}}</p>{{- end -}}
+            {{- with .page.Description -}}<p>{{. | markdownify}}</p>{{- end -}}
         </header>
     </article>
 </a>
