--- a/layouts/shortcodes/img_caption.html
+++ b/layouts/shortcodes/img_caption.html
@@ -52,7 +52,7 @@ With resize:
 {{- /*  Get the image resource if the img_path is not a link  */ -}}
 {{- if not (hasPrefix $img_path "http") -}}
 {{- /*  TODO meter esto en un partial utils/?  */ -}}
-  {{- $image_resource = or (.Page.Resources.Get $img_path) (resources.Get $img_path) (.Page.Resources.GetMatch (printf "**%s**" $img_path )) (resources.GetMatch (printf "**%s**" $img_path )) -}}
+  {{- $image_resource = or (.Page.Resources.Get $img_path) (resources.Get $img_path) (resources.GetMatch (printf "**%s**" $img_path )) (.Page.Resources.GetMatch (printf "**%s**" $img_path )) (resources.GetMatch (printf "**%s**" $img_path )) -}}
   {{- if $image_resource -}}
     {{- if $resize -}}
         {{- /*  {{- $resize_parameter := printf "resize %s" $resize -}}  */ -}}
