google-site-verification

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -58,6 +58,6 @@
   so everything is packed inside main.js and I dont need to process here .js files and add more script tags  */}}
 
   {{ template "_internal/google_analytics.html" . }}
-
+  <meta name="google-site-verification" content="bdnSLOWrix8N34nVaQfTVewbp2ffMDU4j5Pr3nSAFIo" />
   {{- partial "head-custom.html" . -}}
 </head>
